# FitMind

FITMIND-APP-MAIN-PROJECT/: .gitignore  README.md  main.py  model.py  package-lock.json  pyproject.toml  requirements.txt
FITMIND-APP-MAIN-PROJECT/docs/source/: acknowledgements.rst  architecture.rst  components.rst  conf.py  future_work.rst  index.rst  overview.rst  setup.rst  system_requirements.rst  testing.rst  user_requirements.rst
FITMIND-APP-MAIN-PROJECT/instance/: HealthAdviceGroupDatabase.db
FITMIND-APP-MAIN-PROJECT/migrations/versions/: 59f4e1a0f3d2_add_display_time_to_logs.py
FITMIND-APP-MAIN-PROJECT/static/css/: about.css  breathe_flow.css  exercise.css  homepage.css  main.css  notes.css  notifications.css  profile.css  register.css  signIn.css  stress.css  welcome.css
FITMIND-APP-MAIN-PROJECT/static/js/: breathe_flow.js  exercise.js  homepage.js  main.js  notes.js  notifications.js  stress.js  welcome.js
FITMIND-APP-MAIN-PROJECT/templates/: about_app.html  breathe_flow.html  exercise.html  footer_template.html  homepage.html  index.html  login.html  navbar_template.html  notes.html  notification.html  profile.html  register.html  stress.html
FITMIND-APP-MAIN-PROJECT/tests/: test_1.py
