[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitmind"
version = "1.0.0"
description = "A web-based wellness tracker to help students manage stress and track exercise habits."
authors = [
  { name = "Augustine Somiah Gyamprah", email = "gyamprahaugustine07@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "flask",
  "flask-login",
  "flask-migrate",
  "flask-wtf",
  "flask-mail",
  "itsdangerous",
  "sqlalchemy",
  "password-strength"
]

[project.urls]
github = "https://github.com/Group-3D-coursework/FITMIND-APP-MAIN-PROJECT"
Documentation = "https://fitmind.readthedocs.io"
